log/build_2024-05-01_19-52-19/xbox/stderr.log
  File "/home/nvidia/master_ws/install/xbox/lib/python3.8/site-packages/xbox/new_control.py", line 111
    [5.772433   4.5977125  4.7312922  1.7574326  0.97158563 0.95507544
                ^
SyntaxError: invalid syntax

